--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
+    "csd": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-preset-css-prop": "^11.2.0"
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "craco-alias": "^3.0.1"
   }
 }
