--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "extends": "./tsconfig.extend.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,8 +18,5 @@
     "jsxImportSource": "@emotion/react",
     "jsx": "react-jsx"
   },
-  "include": [
-    "src",
-    "craco.config.js"
-  ]
+  "include": ["src", "craco.config.js"]
 }
