--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-      "@hooks": ["./hooks"],
       "@pages": ["./pages"],
+      "@hooks": ["./hooks"],
       "@components/*": ["./components/*"],
+      "@utils": ["./utils"],
+      "@types": ["../node_modules/@types", "./types"],
       "S": ["./S"]
     }
   }
