--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.extend.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,5 +22,8 @@
     "jsxImportSource": "@emotion/react",
     "jsx": "react-jsx"
   },
-  "include": ["src", "craco.config.js"]
+  "include": [
+    "src",
+    "craco.config.js"
+  ]
 }
